# sphinxcontrib-cadquery

./: .editorconfig  .gitignore  .readthedocs.yaml  LICENSE  LICENSE.vtk-js  Makefile  README.rst  package-lock.json  package.json  pyproject.toml  setup.cfg  webpack.config.js
.github/workflows/: lint.yml  test.yml
docs/: Makefile  build.rst  conf.py  configuration.rst  directives.rst  examples.rst  index.rst  installation.rst  related.rst  requirements.txt  usage.rst
docs/examples/: cadquery-svg.rst  cadquery-vtk.rst  index.rst  svg.rst  vtk.rst
docs/includes/: note-view-source.rst  status-pre-alpha.rst  tip-view-source.rst
examples/: simple-rectangular-plate.py
sphinxcontrib/cadquery/: __init__.py  common.py  cq_core.py  cqgi.py  domain.py  option_converters.py
sphinxcontrib/cadquery/static/: cadquery.css  index.js  render.js
sphinxcontrib/cadquery/templates/: cadquery-svg.rst.jinja  cadquery-vtk.rst.jinja  svg-dropdown.html.jinja  svg-overlay.html.jinja  svg.rst.jinja  vtk-container.html.jinja  vtk.rst.jinja
tests/: __init__.py  test_converters.py
