[tool.poetry]
name = "sphinxcontrib-cadquery"
version = "0.8.1"
description = "Sphinx extension for rendering CadQuery models."
packages = [
    {include = "sphinxcontrib"},
]
include = [
    "CHANGELOG.md",
    "sphinxcontrib/cadquery/static/dist/vtk-lite.js*",
    "sphinxcontrib/cadquery/static/render.js",
]
authors = [
    "Seth Fischer <seth@fischer.nz>",
]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/sethfischer/sphinxcontrib-cadquery"
repository = "https://github.com/sethfischer/sphinxcontrib-cadquery.git"
documentation = "https://sphinxcontrib-cadquery.readthedocs.io/"
keywords = [
    "cad",
    "cadquery",
    "parametric",
    "programmatic",
    "sphinx",
    "svg",
    "vtk",
    "vtk.js",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Python",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sethfischer/sphinxcontrib-cadquery/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

Sphinx = ">=5.3.0,<7.0.0"
ipython = ">=7.31.1"
jinja2 = ">=3.0"

[tool.poetry.group.dev.dependencies]
cadquery = "^2.4.0"
cadquery-ocp = "7.7.0"
casadi = {version = "^3.5.6rc2", allow-prereleases = true}

black = "^24.2.0"
commitizen = "^3.14.1"
doc8 = "^0.10.1"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^1.3.0"
pytest = "^7.3.1"
sphinx-rtd-theme = "^1.1.1"
types-docutils = "^0.19.1.2"

[tool.poetry.group.cq-editor]
optional = true

[tool.poetry.group.cq-editor.dependencies]
cq-editor = {git = "https://github.com/CadQuery/CQ-editor.git", rev = "4b461fe195d0a4e99b9a6c43b7e1fe0cb4c5e77d"}
logbook = "^1.5.3"
pyqt5 = "^5.15.7"
pyqtgraph = "^0.13.1"
spyder = "^5.4.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.8.1"
major_version_zero = true
tag_format = "$version"
annotated_tag = true
version_files = [
    "pyproject.toml",
    "sphinxcontrib/cadquery/__init__.py",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypi]
python_version = "3.11"
packages = "sphinxcontrib"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
